# soundear-connector

./: CMakeLists.txt  DeviceBase.hpp  Makefile  README.md  RPi.toolchain.cmake  common.cpp  common.hpp  generate-build.sh  ise3commands.hpp  main.cpp  se3connector.pro  se3device.cpp  se3device.hpp  version.hpp
Helpers/: helpers.cpp  helpers.hpp  leds.cpp  leds.hpp  leq.cpp  leq.hpp
Observers/: observers.hpp
Sockets/: filesocket.cpp  filesocket.hpp  iprotocolinterface.hpp  isocketbase.hpp  metersocket.cpp  metersocket.hpp  protocoldefs.hpp
hidapi/: hid-libusb.c
